<resources>
    <string name="app_name">WFS</string>
    <!-- Hints -->
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_reenter">Re-Enter Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>

    <!-- Index -->
    <string name="facebook_singIn">Sign in with Facebook</string>
    <string name="google_acc_signIn">Sign in with Google Account</string>
    <string name="sign_up">Sign up</string>
    <string name="slogan">Managing your business easily </string>
    <string name="signIn_question">Already have an account? Sign in.</string>

    <!-- Create account -->
    <string name="create_account_description">CREATE YOUR LOGIN</string>
    <string name="accept_tos">Accept terms of use</string>
    <string name="cancel_registration">Cancel</string>
    <string name="next_button_label">Next</string>
    <!-- Sign in -->
    <string name="sign_in_description">SIGN IN</string>
    <string name="sign_in_button">GET STARTED</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="remember_password">Remember password</string>

    <!-- Profile View settings -->
    <string name="profile_user_name">%s %s</string>

    <!-- Profile Update-->
    <string name="acc_update_desc">Account settings</string>
    <string name="update_email">change email</string>
    <string name="update_password">change password</string>
    <string name="update_address">change address</string>
    <string name="upload_cv">upload cv</string>
    <!-- Email Update -->
    <string name="current_email">current email</string>
    <string name="hint_new_email">new email</string>
    <string name="hint_reenter_new_email">re-enter email</string>
    <string name="hint_new_password">new password</string>
    <string name="hint_reenter_new_password">re-enter password</string>
    <!-- New user -->
    <string name="welcome_text">Welcome %s</string>
    <string name="welcome_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        viverra. Tincidunt lobortis feugiat vivamus at augue eget. </string>
    <!-- EMPLOYEE -->
    <string name="job_field">Search for jobs</string>

    <!-- EMPLOYER -->

    <!-- Company -->
    <string name="employer_company_none">
        You don\'t have registered company yet. \n\nTo register your company click on the button below
    </string>
    <string name="company_creator_welcome">
        Welcome to the company creator. \n\nIn the next guided steps you will create your company
        along with the modules for it. Press the button below to begin.
    </string>
    <string name="begin_btn">Begin</string>

    <string name="action_register_company">Register Company</string>
</resources>
